fixing login and menu

--- a/app/home/home.html
+++ b/app/home/home.html
@@ -1,7 +1,13 @@
 <navbar-recipe></navbar-recipe>
-<div class="jumbotron jumbotron-fluid">
-    <div class="container">
-        <h1 class="display-4">מערכת סקרי בטיחות</h1>
-        <p class="lead">יחידת הבטיחות</p>
-    </div>
-</div>
+<div class="jumbotron text-center" >
+        <div class="media">
+             <div class="media-left">
+                 <img ng-src="app\pics\safety.png" class="media-object" style="width:100px">
+             </div>
+             <div class="media-body">
+               <h1>מפגעית</h1>
+               <h1>מערכת לניהול סקרי בטיחות</h1>
+             </div>
+         </div> 
+          
+     </div>
