--- a/app/login/login.html
+++ b/app/login/login.html
@@ -1,3 +1,4 @@
+<navbar-recipe></navbar-recipe>
 <div class="jumbotron text-center" >
     <div class="media">
          <div class="media-left">
@@ -16,13 +17,13 @@
  
 <div class="container login" ng-show = "showform()">
     
-  <div class="alert alert-danger" role="alert" ng-show="invalidLogin">
+    <div class="alert alert-danger" role="alert" ng-show="invalidLogin">
         שם משתמש או סיסמא לא נכונים
     </div>
     <form>
         <div class="form-group">
             <label for="tz">ת.ז :</label>
-            <input type="text" class="form-control" id="tz" ng-model="tz">
+            <input type="text" class="form-control" id="tz" ng-model="tz" ng-keyup="checkdigit()">
          </div>
         <div class="form-group">
             <label for="pwd">סיסמא : </label>
@@ -35,7 +36,7 @@
             </label>
         </div>  
         <div class="container" id = "forgor" >
-            <span class="psw"><a href="mailto:haifaboy@gmail.com">שכחת סיסמא ?</a></span>
+            <span class="psw"><a href="mailto:haifaboy@gmail.com">שכחת סיסמא ?</a> </span>
         </div>
     </form>
 </div>
