--- a/app/navbar/navbar.html
+++ b/app/navbar/navbar.html
@@ -1,16 +1,16 @@
-   <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+   <nav class="navbar navbar-expand-md bg-dark navbar-dark" >
     <a class="navbar-brand" rel="home" href="#!/" title="מערכת סקרי בטיחות">
-      <img style="max-width:30px; margin-top: -7px;" src="app/pics/safety.png">
+      <img style="max-width:30px; margin-top: -7px;" src="app/pics/safety.png" ng-click="gohome()">
     </a>
    
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+    <div class="collapse navbar-collapse" id="collapsibleNavbar"  >
         <ul class="navbar-nav">
             <li class="nav-item" ng-show="isUserLoggedIAndVisble('skarim')">
-                <a class="nav-link" href="#!/skarim">סקרים</a>
+                <a class="nav-link" href="#!/seker">סקרים</a>
             </li>
             <li class="nav-item" ng-show="isUserLoggedIAndVisble('rep')">
                 <a class="nav-link" href="#!/reports">דוחות</a>
