--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
     <link rel="stylesheet" href="style.css">
     <script src="app/app.js"></script>
@@ -16,12 +17,16 @@
     <script src="app/navbar/navbarCtrl.js"></script>
     <script src="app/login/loginCtrl.js"></script>
     <script src="app/model/userSrv.js"></script>
+    <script src="app/home/homeCtrl.js"></script>
+    <script src="app/seker/sekerCtrl.js"></script>
+    <script src="app/reports/reportsCtrl.js"></script>
+    <script src="app/system/systemCtrl.js"></script>
    <!-- <script src="app/skarim/sekerCtrl.js"></script>
     <script src="app/model/sekerSrv.js"></script>
     <script src="app/recipes/newRecipeCtrl.js"></script> -->
     <title>סקרים</title>
 </head>
-<body >
+<body>
     <ng-view></ng-view>
 </body>
 </html>
