--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
 
     <link rel="stylesheet" href="style.css">
     <script src="app/app.js"></script>
+    <script src="app/model/userSrv.js"></script>
+    <script src="app/model/MivnimSrv.js"></script>
     <script src="app/navbar/navbarDir.js"></script>
     <script src="app/navbar/navbarCtrl.js"></script>
     <script src="app/login/loginCtrl.js"></script>
-    <script src="app/model/userSrv.js"></script>
     <script src="app/home/homeCtrl.js"></script>
     <script src="app/seker/sekerCtrl.js"></script>
     <script src="app/reports/reportsCtrl.js"></script>
