add  list of mivnim

--- a/app/navbar/navbar.html
+++ b/app/navbar/navbar.html
@@ -35,7 +35,8 @@
     </div>
     
 </nav> 
-<h5 class="navbar-text pull-left" ng-show ="isUserLoggedIn()" >{{username}}</h5> 
+<h5 class="navbar-text pull-left" ng-show ="isUserLoggedIn()" >
+    {{username }} <img ng-src ={{imgpath}} ></h5> 
 
 
 
