--- a/app/navbar/navbar.html
+++ b/app/navbar/navbar.html
@@ -36,7 +36,7 @@
     
 </nav> 
 <h5 class="navbar-text pull-left" ng-show ="isUserLoggedIn()" >
-    {{username }} <img ng-src ={{imgpath}} ></h5> 
+    {{username}} <img id = "compimg" ng-src ={{imgpath}} ></h5> 
 
 
 
