adding suport for system tables

--- a/app/navbar/navbar.html
+++ b/app/navbar/navbar.html
@@ -1,7 +1,8 @@
    <nav class="navbar navbar-expand-md bg-dark navbar-dark" >
     <a class="navbar-brand" rel="home" href="#!/" title="מערכת סקרי בטיחות">
       <img style="max-width:30px; margin-top: -7px;" ng-src="app/pics/safety.png" ng-click="gohome()">
-      <img style="max-width:30px; margin-top: -7px;" ng-src ={{imgpath}} ng-click="gohome()">
+      <a ng-href={{compsite}} target="_blank"><img style="max-width:30px; margin-top: -7px;" ng-src ={{imgpath}} ></a>
+      
     </a>
    
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
