--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="app/app.js"></script>
     <script src="app/model/userSrv.js"></script>
     <script src="app/model/MivnimSrv.js"></script>
+    <script src="app/model/tablesSrv.js"></script>
     <script src="app/navbar/navbarDir.js"></script>
     <script src="app/navbar/navbarCtrl.js"></script>
     <script src="app/login/loginCtrl.js"></script>
