--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <script src="app/seker/sekerCtrl.js"></script>
     <script src="app/reports/reportsCtrl.js"></script>
     <script src="app/system/systemCtrl.js"></script>
+    <script src="app/system/tablePageCtrl.js"></script>
    <!-- <script src="app/skarim/sekerCtrl.js"></script>
     <script src="app/model/sekerSrv.js"></script>
     <script src="app/recipes/newRecipeCtrl.js"></script> -->
