--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="app/model/userSrv.js"></script>
     <script src="app/model/MivnimSrv.js"></script>
     <script src="app/model/tablesSrv.js"></script>
+    <script src="app/model/sekerSrv.js"></script>
     <script src="app/navbar/navbarDir.js"></script>
     <script src="app/navbar/navbarCtrl.js"></script>
     <script src="app/login/loginCtrl.js"></script>
@@ -24,7 +25,7 @@
     <script src="app/reports/reportsCtrl.js"></script>
     <script src="app/system/systemCtrl.js"></script>
     <script src="app/system/tablePageCtrl.js"></script>
-   <!-- <script src="app/skarim/sekerCtrl.js"></script>
+    <!-- <script src="app/skarim/sekerCtrl.js"></script>
     <script src="app/model/sekerSrv.js"></script>
     <script src="app/recipes/newRecipeCtrl.js"></script> -->
     <title>סקרים</title>
