--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <script src="app/app.js"></script>
     <script src="app/model/userSrv.js"></script>
@@ -22,6 +22,7 @@
     <script src="app/login/loginCtrl.js"></script>
     <script src="app/home/homeCtrl.js"></script>
     <script src="app/seker/sekerCtrl.js"></script>
+    <script src="app/sekerlines/sekerLinesCtrl.js"></script>
     <script src="app/reports/reportsCtrl.js"></script>
     <script src="app/system/systemCtrl.js"></script>
     <script src="app/system/tablePageCtrl.js"></script>
