--- a/app/system/tablepage.html
+++ b/app/system/tablepage.html
@@ -18,6 +18,6 @@
           </tbody>
       </table>
     </div>
-    <button type="button" class="btn btn-success  buttontable" ng-click="newRow()" ng-show="showitem('tablepagenew'+id)">חדש</button>
+    <button type="button" class="btn btn-success  buttontable" ng-click="newRow()" ng-show="showitem('tablepagenew-'+id)">חדש</button>
     <button type="button" class="btn btn-success  buttontable" ng-click="goback()">חזור</button>
 </div>    
